Identity review round 1: fix axis-drop, manifest clobber, preview, merge, roster, preset
Verifier-driven fixes:
- applyResolvedBatch now creates a column for any detected condition axis
  (Genotype/Timepoint/grammar) the schema lacks, promoting a legacy implicit
  project to an explicit primary Condition first — auto-detected axes no longer
  silently dropped.
- PatternPreviewPanel previews the implicit Condition axis and any detected-but-
  not-yet-declared axes (union of schema + candidate axes).
- mergeConditionValues/renameConditionValue mark rewritten cells user-set so a
  confirmed ctrl/CTRL->Control cleanup is not undone by a later auto-fill.
- ConditionManifestPanel.showDialog uses saveAssignmentsPreservingMultiAxis so
  the shared review dialog can't collapse a multi-axis Conditions.csv.
- RosterIO recognises more animal-header synonyms (Mouse ID, Sample ID, …) and,
  on first-column fallback, drops the bogus condition axis it was misread as.
- StatisticsPreset persists conditionAxisId (JSON + toConfig); save site writes it.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>